clang/test/BSC/Negative/Ownership/RuleCheck/own_borrow_conflict_typedef/own_borrow_conflict_typedef.cbs
// RUN: %clang_cc1 -verify %s

typedef int *_Owned _Borrow InvalidPtr; // expected-error {{cannot combine '_Owned' and '_Borrow' qualifiers on the same type}}
typedef Invalid = int *_Owned _Borrow; // expected-error {{cannot combine '_Owned' and '_Borrow' qualifiers on the same type}}


void demo() {
    InvalidPtr p = nullptr;
}
void demo1() {
    Invalid p = nullptr;
}